--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="style.css" />
     <link rel="icon" href="./images/icon.png" type="image/png" />
-    <title>Pig Game</title>
+    <title>Dice Game</title>
   </head>
   <body>
     <main>
